// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TruncatedText matches snapshot 1`] = `
<p
  className="TruncatedText-sc-7sqw62-1 fqcHRh"
>
  asdf
</p>
`;

exports[`TruncatedText matches snapshot when focused 1`] = `
<p
  className="TruncatedText-sc-7sqw62-1 epSSBR"
>
  asdf
</p>
`;
